description: Test profile forms screens
---
- expectVisible: 'Adicione um Endereço'
- expectVisible: 'Rua'
- tapOn: 'Rua'
- inputText: 'Rua 1'
- expectVisible: 'Bairro'
- tapOn: 'Bairro'
- inputText: 'Bairro 1'
- expectVisible: 'Número da Casa'
- tapOn: 'Número da Casa'
- inputText: '1'
- expectVisible: 'Cep'
- tapOn: 'Cep'
- inputText: '12345678'
- expectVisible: 'cidade'
- tapOn: 'cidade'
- inputText: 'Cidade 1'
- expectVisible: 'uf'
- tapOn: 'uf'
- inputText: 'PI'
- expectVisible: 'Salvar'
- tapOn: 'Salvar'