description: Teste de flow de cadastro de usuário.
---
- expectVisible: 'Unboxing'
- expectVisible: 'Cadastre-se'
- tapOn: 'Cadastre-se'
- expectVisible: 'Nome'
- tapOn: 'Nome'
- inputText: 'Mateus'
- expectVisible: 'Email'
- tapOn: 'Email'
- inputText: 'mateus@gmail.com'
- expectVisible: 'Senha'
- tapOn: 'Senha'
- inputText: '123456'
- expectVisible: 'Confirma Senha'
- tapOn: 'Confirma Senha'
- inputText: '123456'
- expectVisible: 'Cadastrar'
- tapOn: 'Cadastrar'
- expectVisible: 'Procurar Produto...'