description: My first Fluttium flow.
---
- expectVisible: 'Unboxing'
- expectVisible: 'Entrar'
- tapOn: 'Entrar'
- expectVisible: 'Email'
- tapOn: 'Email'
- inputText: 'mateus@gmail.com'
- expectVisible: 'Senha'
- tapOn: 'Senha'
- inputText: '123456'
- expectVisible: 'Entrar'
- tapOn: 'Entrar'
- expectVisible: 'Procurar Produto...'